[package]
name = "disk-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.10.1"
dirs = "4.0.0"
glob = "0.3.0"
human_bytes = "0.3.1"
mime_guess = "2.0.4"
priority-queue = "1.2.2"
sysinfo = "0.24.3"
trash = "2.1.4"
